--- a/AwaPI/.settings/org.eclipse.core.resources.prefs
+++ b/AwaPI/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/com/awabot/AwaPI/AwaPI.java=UTF-8
 encoding//src/com/awabot/AwaPI/components/navigation/Avance.java=UTF-8
